--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
 \pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
 
 \f0\fs24 \cf0 <!DOCTYPE html>\
-<html>\
-<head>\
-    <title>My First Website</title>\
-</head>\
-<body>\
-    <h1>Hello, welcome to my website!</h1>\
-    <p>This is my first webpage created by me.</p>\
-</body>\
-</html>\
-}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My First Website</title>
+  <style>
+    body {
+      background-color: #f0f8ff;
+      font-family: Arial, sans-serif;
+    }
+
+    h1 {
+      color: darkblue;
+      text-align: center;
+    }
+
+    p {
+      color: #333;
+      font-size: 18px;
+      padding: 10px;
+    }
+  </style>
+</head>
+<body>
+  <h1>AAI FC/h1>
+  <p>ABISHEK IS GAY</p>
+</body>
+</html>
