--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <title>My First Website</title>
   <style>
     body {
-      background-color: #f0f8ff;
+      background-color: #OOOOff;
       font-family: Arial, sans-serif;
     }
 
     h1 {
-      color: darkblue;
+      color: white;
       text-align: center;
     }
 
