--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 <body>
   <h1> AAI FC </h1>
   <p> ABISHEK IS GAY</p>
+  <img src="PHOTO-2024-10-20-11-07-45.jpg" alt="fuck U" width="500">
 </body>
 </html>
