--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First Website</title>
+  <title>pls share to save a life</title>
   <style>
     body {
       background-color: #OOOOff;
